# turboquant-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_all.py
docs/superpowers/plans/: 2026-03-27-turboquant-library.md
docs/superpowers/specs/: 2026-03-27-turboquant-library-design.md
examples/: neural_embeddings_test.py  numpy_vs_pytorch_benchmark.py  quantization_comparison.py  real_embeddings_test.py  synthetic_test.py
examples/results/: benchmark_results.json  neural_embeddings_results.json  numpy_vs_pytorch_results.json  quantization_comparison_results.json  real_embeddings_results.json  synthetic_results.json
scripts/: precompute_codebooks.py
src/turboquant/: __init__.py  _accel.py  _bitpack.py  _entropy.py  codebook.py  exceptions.py  qjl.py  storage.py  turboquant.py
src/turboquant/codebooks/: codebook_dim1024_bw1.npz  codebook_dim1024_bw2.npz  codebook_dim1024_bw3.npz  codebook_dim1024_bw4.npz  codebook_dim128_bw1.npz  codebook_dim128_bw2.npz  codebook_dim128_bw3.npz  codebook_dim128_bw4.npz  codebook_dim1536_bw1.npz  codebook_dim1536_bw2.npz  codebook_dim1536_bw3.npz  codebook_dim1536_bw4.npz  codebook_dim2048_bw1.npz  codebook_dim2048_bw2.npz  codebook_dim2048_bw3.npz  codebook_dim2048_bw4.npz  codebook_dim256_bw1.npz  codebook_dim256_bw2.npz  codebook_dim256_bw3.npz  codebook_dim256_bw4.npz  codebook_dim3072_bw1.npz  codebook_dim3072_bw2.npz  codebook_dim3072_bw3.npz  codebook_dim3072_bw4.npz  codebook_dim384_bw1.npz  codebook_dim384_bw2.npz  codebook_dim384_bw3.npz  codebook_dim384_bw4.npz  codebook_dim4096_bw1.npz  codebook_dim4096_bw2.npz  codebook_dim4096_bw3.npz  codebook_dim4096_bw4.npz  codebook_dim512_bw1.npz  codebook_dim512_bw2.npz  codebook_dim512_bw3.npz  codebook_dim512_bw4.npz  codebook_dim64_bw1.npz  codebook_dim64_bw2.npz  codebook_dim64_bw3.npz  codebook_dim64_bw4.npz  (+4 more)
tests/: conftest.py  test_accel.py  test_adversarial.py  test_bitpack.py  test_codebook.py  test_entropy.py  test_exceptions.py  test_integration.py  test_outliers.py  test_qjl.py  test_storage.py  test_stress.py  test_turboquant.py
